2008-06-27 [paul]	0.3.4

	0.3.4 released

2008-06-27 [paul]	0.3.3cvs1

	* po/fi.po
		updated by Flammie Pirinen

2008-04-18 [paul]	0.3.3

	0.3.3 released

	* po/fi.po
	* po/it.po
		updated by Flammie Pirinen and Andrea Spadaccini

2008-04-18 [colin]	0.3.2cvs2

	* po/fr.po
		Update translation

2008-02-12 [wwp]	0.3.2cvs1

	* config.h.in
		Remove generated file from repository.

	* configure.ac
		Updated to match folder_sel API changes.


2008-02-08 [paul]	0.3.2

	0.3.2 released

2008-02-08 [paul]	0.3.1cvs1

	* po/fi.po
	* po/it.po
		updated by Flammie Pirinen and Andrea Spadaccini

2007-12-17 [paul]	0.3.1

	0.3.1 released

2007-12-17 [paul]	0.3.0cvs2

	* po/hu.po
	* po/it.po
		updated by Pader Rezso and Andrea Spadaccini

2007-11-26 [mones]	0.3.0cvs1

	* README
		State the fact that SpamCop is supported
		(already fixed at Debian package description)

2007-11-19 [paul]	0.3.0

	0.3.0 released

2007-11-19 [paul]	0.2.0cvs9

	* po/Makevars
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,
		Pader Reszo, Andrea Spadaccini, Frederico Goncalves
		Guimaraes, and Andrej Kacian
						

2007-11-12 [colin]	0.2.0cvs8

	* src/spam_report.c
		Set CURL timeout

2007-10-09 [wwp]	0.2.0cvs7

	* po/.cvsignore
		Ignore the right .pot file.

2007-10-04 [colin]	0.2.0cvs6

	* src/spam_report_prefs.c
		Verify success on writes

2007-10-03 [colin]	0.2.0cvs5

	* src/spam_report.c
	* src/spam_report_prefs.c
		Fix warnings

2007-10-03 [colin]	0.2.0cvs4

	* configure.ac
		Fix conflict

2007-10-03 [colin]	0.2.0cvs3

	* configure.ac
		Fix missing type checks

2007-09-20 [paul]	0.2.0cvs2

	* configure.ac
	* po/it.po
		submitted by Andrea Spadaccini

2007-09-16 [colin]	0.2.0cvs1

	* src/spam_report.c
	* src/spam_report_prefs.c
	* src/spam_report_prefs.h
		Bug 1308: Add support for spamcop

2007-09-03 [paul]	0.2.0

	0.2 released (initial release)

2007-09-03 [paul]	0.1.1cvs12

	* configure.ac
	* po/ca.po
	* po/es.po