@@ -25,3 +25,4 @@
 ( cvs diff -u -r -1.1.2.1 -r -1.1.2.2 config.h.in;  cvs diff -u -r 1.1.2.27 -r 1.1.2.28 configure.ac;  ) > 0.3.2cvs1.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 po/fr.po;  ) > 0.3.2cvs2.patchset
 ( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 po/fi.po;  ) > 0.3.3cvs1.patchset
+( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/spam_report.c;  ) > 0.3.4cvs1.patchset
